# EuropeanFootballLeaguePredictor

./: .buildinfo  .coverage  .gitattributes  .gitignore  Evaluation.html  Evaluation.md  Home.html  Model.html  Model.md  PROJECT-SETUP.bat  PROJECT-SETUP.sh  README.md  Readme.html  Readme.md  Upcoming.html  _config.yml  _toc.yml  genindex.html  objects.inv  predictor_app.py  pyproject.toml  requirements.txt  run_data_collection.py  run_data_preprocessing.py  run_evaluation.py  run_evaluation_per_season.py  run_predictions.py  run_project_setup.bat  run_project_setup.sh  run_updates.py  search.html  searchindex.js
.github/workflows/: linux_script_pipeline.yaml  pytest.yaml  script_pipeline.yaml  updates.yaml  windows_script_pipeline.yaml
Predictions/Bundesliga/: InteractiveFigure.html  PredictionTable.html
Predictions/EPL/: InteractiveFigure.html  PredictionTable.html
Predictions/La_Liga/: InteractiveFigure.html  PredictionTable.html
Predictions/Ligue_1/: InteractiveFigure.html  PredictionTable.html
Predictions/Serie_A/: InteractiveFigure.html  PredictionTable.html
_build/.doctrees/: Evaluation.doctree  Home.doctree  Model.doctree  Readme.doctree  Upcoming.doctree  environment.pickle
_build/html/: Evaluation.html  Home.html  Model.html  Readme.html  Upcoming.html  genindex.html  index.html  searchindex.js
_images/league_figures/: InteractiveFigure.html
_sources/: Home.md  Upcoming.md
europeanfootballleaguepredictor/: .gitignore
europeanfootballleaguepredictor/common/: config_parser.py
europeanfootballleaguepredictor/config/: config.yaml
europeanfootballleaguepredictor/data/: bookmaker_scraper.py  bookmaker_scraper_v2.py  (+4 more)
tests/: test_bettor.py  test_predictor_network.py
(+1039 files in other folders)
