[tool.poetry]
name = "europeanfootballleaguepredictor"
version = "0.1.0"
description = "A model network that predicts the upcoming top european league football matches."
authors = ["nickpadd"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
loguru = "^0.7.2"
understat = "^0.1.11"
argparse = "^1.4.0"
asyncio = "^3.4.3"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"
requests = "^2.31.0"
plotly = "^5.18.0"
pretty-html-table = "^0.9.16"
coverage = "^7.3.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
mlflow = "^2.8.0"
gradio = "^4.7.1"
ipykernel = "^6.29.2"
selenium = "^4.17.2"
undetected-chromedriver = "^3.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
