[tool.poetry]
name = "europeanfootballleaguepredictor"
version = "0.1.0"
description = "A statistical/machine learning model that predicts the upcoming top european league football matches using advanced league table statistics"
authors = ["nickpadd <nickpad1@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
understat = "^0.1.12"
numpy = "^2.1.0"
loguru = "^0.7.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
gradio = "^4.42.0"
sqlalchemy = "^2.0.32"
undetected-chromedriver = "^3.5.5"
plotly = "^5.23.0"
pandas = "^2.2.2"
tqdm = "^4.66.5"
pretty-html-table = "^0.9.16"
selenium = "^4.23.1"
pyyaml = "^6.0.2"
asyncio = "^3.4.3"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
